<resources>
    <string name="app_name">Calculator.Kotlin</string>
    <string name="clear">CLEAR</string>
    <string name="d">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="y">*</string>
    <string name="r">=</string>
    <string name="dd">/</string>
    <string name="_0">0</string>
    <string name="t">.</string>
    <string name="p">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="m">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="delete">DELETE</string>
</resources>